@@ -93,12 +93,21 @@
 				ctrlproxy is connected to at the moment.</para></description>
 	</ctrlproxy-command>
 
-	<ctrlproxy-command name="log_level">
+	<ctrlproxy-command name="set log_level">
 		<short-description>Change or display log level</short-description>
-		<syntax>LOG_LEVEL [&lt;level&gt;]</syntax>
+		<syntax>set log_level [&lt;level&gt;]</syntax>
 		<description>
-			<para>Change log level if specified. If not specified 
-					will print the current log level.</para></description>
+			<para>View or change the CtrlProxy internal log level.</para></description>
+	</ctrlproxy-command>
+
+	<ctrlproxy-command name="set">
+		<short-description>Change settings</short-description>
+		<syntax>set [&lt;name&gt; [&lt;value&gt;]]</syntax>
+		<description>
+			<para>List, view or change internal settings. </para>
+			<para>Specifying no argument will list all 
+				available settings. </para>
+		</description>
 	</ctrlproxy-command>
 
 	<ctrlproxy-command name="nextserver">
